--- a/construction.html
+++ b/construction.html
@@ -80,7 +80,7 @@
                                                         <li><a href="#" class="pad-narrow"> INGLÉS </a></li>
                                                         <li><a href="#" class="pad-narrow"> FRANCÉS </a></li>
                                                         <li><a href="#" class="pad-narrow"> MANDARÍN </a></li>
-                                                        <li><a href="#" class="pad-narrow"> PORTUGUES </a></li>
+                                                        <li><a href="#" class="pad-narrow"> PORTUGUÉS </a></li>
                                                     </ul>
                                                 </div>
                                             </li>
@@ -299,7 +299,7 @@
                                     <li class="dropdown right-dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Movimientos artísticos </a>
                                         <ul class="dropdown-menu no-border-radius">
-                                        	<li><a href="blog-one-col.html"> Realismp </a></li>
+                                        	<li><a href="blog-one-col.html"> Realismo </a></li>
                                             <li><a href="blog-two-col.html"> Impresionismo </a></li>
                                             <li><a href="blog-three-col.html"> Cubismo </a></li>
                                             <li><a href="blog-left-sidebar.html"> puntillismo </a></li>
@@ -375,7 +375,7 @@
                             <ul>
                                 <li class="slider-color-schema-dark" data-index="rs-2" data-transition="fade" data-slotamount="7" data-easein="default" data-easeout="default" data-masterspeed="1000" data-rotate="0" data-saveperformance="off" data-title="Slide" data-description="">
                                     <!-- main image for revolution slider -->
-                                    <img src="img/Fondo flores.jpg" alt="image description" data-bgposition="center center" data-kenburns="on" data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="10" class="rev-slidebg" data-bgfit="cover" data-no-retina>
+                                    <img src="img/banner 2.jpg" alt="image description" data-bgposition="center center" data-kenburns="on" data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="10" class="rev-slidebg" data-bgfit="cover" data-no-retina>
                                     <div class="slider-sub-title text-white tp-caption tp-resizeme rs-parallaxlevel-0" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['top','top','middle','middle']" data-voffset="['145','100','10','20']" data-width="['1200','960','720','540']" data-textalign="center" data-fontsize="['30','28','24','20']" data-lineheight="['72','62','50','50']" data-letterspacing="5" data-height="none" data-whitespace="normal" data-transform_idle="o:1;" data-transform_in="z:0;rX:0deg;rY:0;rZ:0;sX:1.5;sY:1.5;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:0px;" data-mask_out="x:inherit;y:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-paddingright="[25,25,25,25]" data-paddingleft="[25,25,25,25]">
                                         Claridad.paz.amor
                                     </div>
