--- a/construction.html
+++ b/construction.html
@@ -485,42 +485,42 @@
                                     <div class="col-md-4 col-xl-3">
                                         <div class="top-xl-space">
                                             <div class="img-wrap">
-                                                <img src="img/logo-01.png" alt="logo">
+                                                <img src="img/paypal.png" alt="logo">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-xl-3">
                                         <div class="top-xl-space">
                                             <div class="img-wrap">
-                                                <img src="img/logo-02.png" alt="logo">
+                                                <img src="img/mastercard.png" alt="logo">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-xl-3">
                                         <div class="top-xl-space">
                                             <div class="img-wrap">
-                                                <img src="img/logo-03.png" alt="logo">
+                                                <img src="img/skrill.png" alt="logo">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-xl-3">
                                         <div class="top-xl-space">
                                             <div class="img-wrap">
-                                                <img src="img/logo-04.png" alt="logo">
+                                                <img src="img/visa.png" alt="logo">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-xl-3">
                                         <div class="top-xl-space">
                                             <div class="img-wrap">
-                                                <img src="img/logo-05.png" alt="logo">
+                                                <img src="img/amazon-payments.png" alt="logo">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-xl-3">
                                         <div class="top-xl-space">
                                             <div class="img-wrap">
-                                                <img src="img/logo-01.png" alt="logo">
+                                                <img src="img/efecty.png" alt="logo">
                                             </div>
                                         </div>
                                     </div>
