--- a/construction.html
+++ b/construction.html
@@ -535,29 +535,29 @@
                                     <div class="icon">
                                         <img src="img/icons/icon-planning.png" alt="planning">
                                     </div>
-                                    <h3 class="block-title">Project Planning</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore </p>
+                                    <h3 class="block-title">Elige la vela perfecta para ti</h3>
+                                    <p>Encuentra la vela que necesitas, explora y analiza las propiedades de cada una de las opciones que tenemos. </p>
                                 </div>
                                 <div class="info-block info-block-v2 block-2 col-sm-6 col-lg-3 text-center">
                                     <div class="icon">
                                         <img src="img/icons/icon-design.png" alt="design">
                                     </div>
-                                    <h3 class="block-title">Product Design</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore </p>
+                                    <h3 class="block-title">Finaliza tu compra</h3>
+                                    <p>Posteriorimente de que encuentres la vela que mejor se acomode a lo que necesites, dale en finalizar para seguir con el siguiente paso de la compra. </p>
                                 </div>
                                 <div class="info-block info-block-v2 block-3 col-sm-6 col-lg-3 text-center">
                                     <div class="icon">
                                         <img src="img/icons/icon-service.png" alt="design">
                                     </div>
-                                    <h3 class="block-title">After Spales Service</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore </p>
+                                    <h3 class="block-title">Transportadora</h3>
+                                    <p>Luego de realizar el pago, se iniciará el proceso detransportación de tu producto hatsa la pierta de tu casa.  </p>
                                 </div>
                                 <div class="info-block info-block-v2 block-4 col-sm-6 col-lg-3 text-center">
                                     <div class="icon">
                                         <img src="img/icons/icon-support.png" alt="design">
                                     </div>
-                                    <h3 class="block-title">Customer Support</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore </p>
+                                    <h3 class="block-title">Cuéntanos tu experiencia</h3>
+                                    <p>En seguida de que recibas tu pedido escríbenos en nuestras redes sociales tu experiencia para ir mejorando y teniendo en cuenta lo dicho para tu comodidad. </p>
                                 </div>
                             </div>
                         </div>
@@ -565,8 +565,8 @@
                     <section class="content-block bg-white">
                         <div class="container">
                             <div class="block-heading text-center bottom-space">
-                                <h3 class="content-title">PEOPLE BEHIND OUR SUCCESS</h3>
-                                <h2 class="block-main-heading text-black">BRAINS BEHIND</h2>
+                                <h3 class="content-title">EN CASO DE QUE NECESITES</h3>
+                                <h2 class="block-main-heading text-black">UN CAMBIO O UNA DEVOLUCIÓN</h2>
                             </div>
                             <div class="row">
                                 <div class="col-md-4">
