Modificaciones Tania Gonzalez, archivos features-left-push.html,main.css y agregar imagen  de fondo en carpeta img/tania_gonzalez/fondo.jpg

--- a/features-left-push.html
+++ b/features-left-push.html
@@ -388,7 +388,7 @@
                         <div class="centered">
                             <div class="container">
                                 <div class="visual-center">
-                                    <h1 class="visual-title visual-sub-title">Left Push Panel</h1>
+                                    <h1 class="visual-title visual-sub-title">Pagina Tania Gonzalez</h1>
                                     <div class="breadcrumb-block">
                                         <ol class="breadcrumb">
                                             <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
