--- a/construction.html
+++ b/construction.html
@@ -572,13 +572,13 @@
                                 <div class="col-md-4">
                                     <div class="team-box caption-fade-up">
                                         <div class="img-block">
-                                            <img src="img/team-06.jpg" alt="images description">
+                                            <img src="img/Elegir.jpg" alt="images description">
                                         </div>
                                         <figure>
                                             <figcaption class="team-des-v2">
-                                                <span class="sub">Founder / CEO </span>
-                                                <strong class="content-title name">Nicola Gorani</strong>
-                                                <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                                <span class="sub"> Escríbenos  </span>
+                                                <strong class="content-title name">Por la página web</strong>
+                                                <p>En esta página web puedes encontrar un chat en tiempo real, donde puede exponer tu caso y una de nuestras asesoras te podrá contribuir a la solución de lo que nos planteas.</p>
                                             </figcaption>
                                         </figure>
                                     </div>
@@ -590,9 +590,9 @@
                                         </div>
                                         <figure>
                                             <figcaption class="team-des-v2">
-                                                <span class="sub">Founder / CTO </span>
-                                                <strong class="content-title name">Jeremi Stralt</strong>
-                                                <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                                <span class="sub"> LLámanos </span>
+                                                <strong class="content-title name">a nuestras líneas telefónicas</strong>
+                                                <p>En la parte inferior de muestra página web y en la descripción de todas nuestras redes sociales, nos podrás llamar y te responderemos cualquier duda que tengas. </p>
                                             </figcaption>
                                         </figure>
                                     </div>
@@ -604,9 +604,9 @@
                                         </div>
                                         <figure>
                                             <figcaption class="team-des-v2">
-                                                <span class="sub">Web Programmer </span>
-                                                <strong class="content-title name">Colin Nizurb</strong>
-                                                <p>Put all speaking her delicate recurred every possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. </p>
+                                                <span class="sub"> Contáctanos </span>
+                                                <strong class="content-title name">Te ayudaremos</strong>
+                                                <p>Conversarémos y nos explicarás tu situación, se iniciará el debido proceso correspondiente, te pediremos tus datos y listo, llegará o se cancelará tu producto lo más pronto posible.</p>
                                             </figcaption>
                                         </figure>
                                     </div>
