--- a/element-lightbox.html
+++ b/element-lightbox.html
@@ -477,7 +477,7 @@
                         <form action="#" method="post">
                             <fieldset class="clearfix">
                                 <div class="form-group input-holder">
-                                    <input type="email" class="form-control" placeholder="Email Address">
+                                    <input type="email" class="form-control" placeholder="Dirección de correo">
                                 </div>
                                 <input type="submit" class="btn btn-trans-dark-gray" value="Subscribe">
                             </fieldset> 
