--- a/team.html
+++ b/team.html
@@ -347,7 +347,7 @@
                     <div class="visual-inner visual-banner dark-overlay parallax" data-stellar-background-ratio="0.55">
                         <div class="container">
                             <div class="visual-text-large text-left visual-center">
-                                <h1 class="visual-title visual-sub-title">Meet the Team</h1>
+                                <h1 class="visual-title visual-sub-title">MEET THE TEAM</h1>
                                 <p>We are the perfect and specialized team you need for greater performance in design!.</p>
                                 <div class="breadcrumb-block">
                                     <ol class="breadcrumb">
