--- a/element-lightbox.html
+++ b/element-lightbox.html
@@ -353,7 +353,7 @@
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
                                         <li class="breadcrumb-item"><a href="index.html"> Elements </a></li>
-                                        <li class="breadcrumb-item active"> Lightbox </li>
+                                        <li class="breadcrumb-item active"> Lightboxx </li>
                                     </ol>
                                 </div>
                             </div>
