--- a/element-icon-lists.html
+++ b/element-icon-lists.html
@@ -53,11 +53,11 @@
                                     <li class="dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Home </a>
                                         <ul class="dropdown-menu no-border-radius">
-                                            <li><a href="index.html"> Creative Agency </a></li>
-                                            <li><a href="design-studio.html"> Design Studio </a></li>
-                                            <li><a href="digital-agency.html"> Digital Agency </a></li>
-                                            <li><a href="construction.html"> Construction </a></li>
-                                            <li><a href="corporate.html"> Corporate </a></li>
+                                            <li><a href="index.html"> Agencia Creativa </a></li>
+                                            <li><a href="design-studio.html"> Estudio de Diseño </a></li>
+                                            <li><a href="digital-agency.html"> Agencia Digital </a></li>
+                                            <li><a href="construction.html"> Construcciòn </a></li>
+                                            <li><a href="corporate.html"> Corporativo </a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown" data-animation="fadeIn">
