--- a/portfolio-no-sidebar-6-col.html
+++ b/portfolio-no-sidebar-6-col.html
@@ -597,10 +597,10 @@
                         <div class="col-md-4">
                             <div class="footer-nav inline-nav text-center">
                                 <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#">PRDUCTOS</a></li>
+                                    <li><a href="#">RECETAS</a></li>
+                                    <li><a href="#">BLOG</a></li>
+                                    <li><a href="#">CONTACTO</a></li>
                                 </ul>
                             </div>
                         </div>
