cambios cajas flotantes
cajas

--- a/portfolio-3-col.html
+++ b/portfolio-3-col.html
@@ -348,9 +348,10 @@
                         <div class="centered">
                             <div class="container">
                                 <div class="visual-text visual-center">
-                                    <h1 class="visual-title visual-sub-title text-white">Experiencias&nbsp;</h1>
-                                    <div class="breadcrumb-block">
-                                        <ol class="breadcrumb">
+                                    <h1 class="visual-title visual-sub-title text-white">COTIZA TU BODA</h1>
+                                    <h1 class="visual-title visual-sub-title text-white">&nbsp;SOÑADA&nbsp; &nbsp;</h1>
+<div class="breadcrumb-block">
+                    <ol class="breadcrumb">
                                             <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
                                             <li class="breadcrumb-item"><a href="#"> Protfolio </a></li>
                                             <li class="breadcrumb-item active"> Grid </li>
@@ -418,7 +419,7 @@
                                 </div>
                                 <div class="gallery-item col-lg-6 col-xl-4 ui programming">
                                     <figure class="caption-hover-full">
-                                        <a class="fancy-pop" href="portfolio-single.html"></a>
+                                        <a class="fancy-pop" href="portfolio-single.html">Tu boda en la naturaleza</a>
                                         <div class="image-wrapper"><img src="img/portfolio-23.jpg" alt="images description"></div>
                                        <div class="image-details">
                                             <div class="figcaption">
@@ -426,7 +427,7 @@
                                                     <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Tu boda en la naturaleza</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -442,7 +443,7 @@
                                                     <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Tu boda en tu hogar</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -458,7 +459,7 @@
                                                     <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Tu boda en la ciudad</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -474,7 +475,7 @@
                                                     <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Tu boda en el mar</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -490,7 +491,8 @@
                                                     <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Tu boda en la playa
+											</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -506,7 +508,7 @@
                                                     <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Tu boda en otro país</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -522,7 +524,7 @@
                                                     <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Tu boda campestre</h2>
                                                 </div>
                                             </div>
                                         </div>
