--- a/element-galleries.html
+++ b/element-galleries.html
@@ -347,16 +347,16 @@
                     <div class="visual-inner visual-banner-v22 dark-overlay parallax" data-stellar-background-ratio="0.55">
                         <div class="container">
                             <div class="visual-text-large text-left visual-center">
-                                <h1 class="visual-title visual-sub-title">The Galleries</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit porro laudantium sequi. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <h1 class="visual-title visual-sub-title">GALERÍA DE BODAS&nbsp;</h1>
+                                <p>En este espacio encontraras nuestras fotografías más destacada y lo último en tendencia en vestidos de novia&nbsp; &nbsp; &nbsp; &nbsp;</p>
                                 <div class="breadcrumb-block">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
                                         <li class="breadcrumb-item"><a href="index.html"> Elements </a></li>
                                         <li class="breadcrumb-item active"> Galleries </li>
-                                    </ol>
-                                </div>
-                            </div>
+                                  </ol>
+                              </div>
+                          </div>
                         </div>
                     </div>
                 </section>
