--- a/element-galleries.html
+++ b/element-galleries.html
@@ -348,7 +348,7 @@
                         <div class="container">
                             <div class="visual-text-large text-left visual-center">
                                 <h1 class="visual-title visual-sub-title">GALERÍA DE BODAS&nbsp;</h1>
-                                <p>En este espacio encontraras nuestras fotografías más destacada y lo último en tendencia en vestidos de novia&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                                <p>En este espacio encontraras nuestras fotografías más destacada y lo último en tendencia en vestidos de novia&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
                                 <div class="breadcrumb-block">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
